[MNG-8567] Fix resumption to not recurse into subprojects